package src;

public class Movies extends Media{
    public Movies(String title) {
        super(title);
    }
}
